@@ -1,5 +1,10 @@
 1999-08-31  Dave Camp  <campd@oit.edu>
 
+	* gconf/gconftool.c (main): Changed --dir-exists to return 0 if 
+	the dir exists, and 2 if it does not.
+
+1999-08-31  Dave Camp  <campd@oit.edu>
+
 	* gconf/gconftool.c (options): Added "--dir-exists".
 	(main): If dir_exists is on the command line, check if the argument dir
 	exists.
